@@ -36,11 +36,16 @@ class TestCatRevision(blackbox.ExternalBase):
         wt.commit('Commit two', rev_id='a@r-0-2')
         wt.commit('Commit three', rev_id='a@r-0-3')
 
-        revs = {
-            1:r.get_revision_xml('a@r-0-1'),
-            2:r.get_revision_xml('a@r-0-2'),
-            3:r.get_revision_xml('a@r-0-3'),
-        }
+        r.lock_read()
+        try:
+            revs = {}
+            for i in (1, 2, 3):
+                revid = "a@r-0-%d" % i
+                stream = r.revisions.get_record_stream([(revid,)], 'unordered', 
+                                                       False) 
+                revs[i] = stream.next().get_bytes_as('fulltext')
+        finally:
+            r.unlock()
 
         self.check_output(revs[1], 'cat-revision a@r-0-1')
         self.check_output(revs[2], 'cat-revision a@r-0-2')
